--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1100,3 +1100,49 @@ volume = {92},
 journal = {Journal of the Acoustical Society of America},
 doi = {10.1121/1.404385}
 }
+
+@misc{westernpitch1,
+      title={Harmony Explained: Progress Towards A Scientific Theory of Music}, 
+      author={Daniel Shawcross Wilkerson},
+      year={2014},
+      eprint={1202.4212},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
+
+@article{westernpitch2,
+author = {Jacoby, Nori and Undurraga, Eduardo and Mcpherson, Malinda and Valdés, Joaquín and Ossandon, Tomas and McDermott, Josh},
+year = {2019},
+month = {09},
+title = {Universal and Non-universal Features of Musical Pitch Perception Revealed by Singing},
+volume = {29},
+journal = {Current Biology},
+doi = {10.1016/j.cub.2019.08.020},
+url = {https://mcdermottlab.mit.edu/papers/Jacoby_etal_2019_Bolivia_sung_reproduction.pdf}
+}
+
+@inproceedings{geometriclog,
+author={Diniz, Filipe C. C. B. and Kothe, Iuri and Biscainho, Luiz W. P. and Netto, Sergio L.},
+booktitle={2006 International Telecommunications Symposium},
+title={A bounded-Q fast filter bank for audio signal analysis},
+year={2006},
+pages={1015-1019},
+doi={10.1109/ITS.2006.4433420},
+url={http://www02.smt.ufrj.br/~sergioln/papers/IC33.pdf}
+}
+
+@inproceedings{essentia,
+author = {Bogdanov, Dmitry and Wack, Nicolas and G\'{o}mez, Emilia and Gulati, Sankalp and Herrera, Perfecto and Mayor, Oscar and Roma, Gerard and Salamon, Justin and Zapata, Jos\'{e} and Serra, Xavier},
+title = {ESSENTIA: An Open-Source Library for Sound and Music Analysis},
+year = {2013},
+isbn = {9781450324045},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2502081.2502229},
+doi = {10.1145/2502081.2502229},
+booktitle = {Proceedings of the 21st ACM International Conference on Multimedia},
+pages = {855–858},
+keywords = {open source, music information retrieval, audio analysis, sound and music computing, signal processing},
+location = {Barcelona, Spain},
+series = {MM '13}
+}
