--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -453,7 +453,7 @@ journal = {Siam Review}
 }
 
 @phdthesis{doerflerphd,
-author = {Doerfler, Monika},
+author = {D{\"o}rfler, Monika},
 year = {2002},
 pages = {},
 title = {Gabor analysis for a class of signals called music},
